fixed some broken css references and also the reference to the json file / image files
the ipad seems to be much more sensitive than chrome

--- a/APP/platforms/ios/www/css/bitworkBranding.css
+++ b/APP/platforms/ios/www/css/bitworkBranding.css
@@ -92,7 +92,7 @@ h4 {
     min-height: 200px;
     max-height: 200px;
     z-index: 1000;
-    background-image: url(../content/menu-bg-estra-bright.png);
+    background-image: url(../content/menu-bg-extra-bright.png);
     /*border-color:  rgba(0,0,0,0.95);*/
     border: none;
     -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.95);
